--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,7 @@
-bootstrap-admin==0.3.9
-simplejson==3.16.0
-Django==2.0.8
-django-filter==2.0.0
-djangorestframework==3.8.2
-djangorestframework-filters==0.10.2
-djangorestframework-jwt==1.11.0
-psycopg2-binary==2.7.5
-python-dateutil==2.7.3
-requests==2.18.4
-django-anymail[mailgun]==3.0
-django-sendsms==0.3.1
-twilio==6.16.0
-isodate==0.6.0
-djoser==1.2.0
-pillow==5.2.0
-django-reversion==3.0.0
-phonenumbers==8.9.10
-django-phonenumber-field==2.0.0
-jsonfield==2.0.2
-pytest==3.7.2
-pytest-cov==2.5.1
-pytest-django==3.4.2
+Django==2.1.2
+django_filters==0.2.1
+djoser==1.3.1
+djangorestframework==3.9.0
+django_reversion==3.0.1
+sendsms==0.2.0
+twilio==6.19.2
