--- a/consensus/FRONTEND/consensus-ui/package.json
+++ b/consensus/FRONTEND/consensus-ui/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "bootstrap4-notify": "^4.0.3",
+    "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
