--- a/consensus/FRONTEND/consensus-ui/package.json
+++ b/consensus/FRONTEND/consensus-ui/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuetable-2": "^1.7.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -21,6 +22,8 @@
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "@vue/eslint-config-prettier": "^3.0.5",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "1.15.2",
     "vue-template-compiler": "^2.5.17"
   }
 }
