--- a/consensus/FRONTEND/consensus-ui/package.json
+++ b/consensus/FRONTEND/consensus-ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "bootstrap4-notify": "^4.0.3",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
