--- a/consensus/FRONTEND/consensus-ui/package.json
+++ b/consensus/FRONTEND/consensus-ui/package.json
@@ -15,16 +15,16 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vue": "^2.5.22",
-    "vue-breadcrumbs": "^1.2.0",
     "vue-router": "^3.0.2",
     "vuetable-2": "^1.7.5",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-service": "^3.3.1",
-    "vue-template-compiler": "^2.5.22",
     "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/eslint-config-prettier": "^4.0.1"
+    "@vue/cli-service": "^3.3.1",
+    "@vue/eslint-config-prettier": "^4.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "vue-template-compiler": "^2.5.22"
   }
 }
