--- a/consensus/FRONTEND/consensus-ui/package.json
+++ b/consensus/FRONTEND/consensus-ui/package.json
@@ -24,7 +24,9 @@
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.1",
     "@vue/eslint-config-prettier": "^4.0.1",
+    "eslint": "^5.12.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "vue-template-compiler": "^2.5.22"
   }
 }
